chore: clean up and update dependencies